--- a/members/templates/members/includes/new_member_form.html
+++ b/members/templates/members/includes/new_member_form.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load formstyles %}
 
 <!-- Modal - Login to your personal account-->
 <div class="modal fade" id="id_add_new_member_modal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
@@ -75,8 +76,9 @@
 					</div>
 					<div class="form-group">
 						<div class="form-check">
-							<input class="form-check-input" type="checkbox" id="subscribe{{member.pk}}">
-							<label class="form-check-label" for="subscribe{{member.pk}}">
+							{% comment %} <input class="form-check-input" type="checkbox" id="subscribe{{member.pk}}"> {% endcomment %}
+							{{ add_new_member_form.subscription|addcss:"form-check-input"}}
+							<label class="form-check-label" for="id_subscription">
 								подписка на рассылку от РСПС
 							</label>
 						</div>
