add handle of ajax member form updating

--- a/members/templates/members/includes/member_edit_form.html
+++ b/members/templates/members/includes/member_edit_form.html
@@ -78,6 +78,7 @@
             <button type='button' data-member-id="{{member.pk}}" class="update_member_button btn btn-primary btn-xs">Сохранить</button>
             <a href="#multiCollapseEmpl{{ member.pk }}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false"
                 role="button">Закрыть</a>
+            <div id="responseMessage{{ member.pk }}" class="d-inline-block ml-2" style="display:none"></div>
         </div>
         <div class="col-auto my-1">
             <div class="form-check">
