--- a/members/templates/members/includes/member_edit_form.html
+++ b/members/templates/members/includes/member_edit_form.html
@@ -56,14 +56,7 @@
 
     <h6 class='text-primary mb-3'>Статус членства в РСПС</h6>
 
-    <div class="progress mb-5">
-        <div class="progress-bar bg-default text-secondary w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0"
-            aria-valuemax="100">Заявлен</div>
-        <div class="progress-bar bg-default text-secondary w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0"
-            aria-valuemax="100">Одобрен РСПС</div>
-        <div class="progress-bar bg-default text-secondary w-25" role="progressbar" aria-valuenow="25" aria-valuemin="0"
-            aria-valuemax="100">Сертификат РСПС</div>
-    </div>
+    {% include 'members/includes/member_status_progress.html' %}
 
     <div class="form-group">
         <div class="form-check">
