add search member filter

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -41,7 +41,7 @@
 	{% include 'mainapp/includes/modal-participantConf.html' %}
 	{% include 'mainapp/includes/modal-regConference.html' %}
 	{% include 'mainapp/includes/modal-newEmployee.html' %}
-	{% include 'mainapp/includes/modal-regCongress.html' %}
+	{% comment %} {% include 'mainapp/includes/modal-regCongress.html' %} {% endcomment %}
 	{% include 'mainapp/includes/modal-newDepartament.html' %}
 	{% include 'mainapp/includes/modal-newCongress.html' %}
 
