--- a/members/templates/members/lk_member_list.html
+++ b/members/templates/members/lk_member_list.html
@@ -1,4 +1,5 @@
 {% extends 'mainapp/base.html' %}
+{% load formstyles %}
 
 {% block content %}
 <!-- Content -->
@@ -12,7 +13,7 @@
 			</ol>
 		</nav>
 
-		<h4 class="title-page">Личный кабинет</h4>
+		<h4 id="lk_top" class="title-page">Личный кабинет</h4>
 
 		<ul class="nav nav-tabs mb-4">
 			<li class="nav-item">
@@ -34,11 +35,14 @@
 
 		<div class="search p-3 mb-4">
 			<h5>Быстрый поиск</h5>
-			<form>
+			<form method='post' action='#lk_top'>
 				<div class="form-row">
+					{% csrf_token %}
 					<div class="form-group col-md-6 col-lg-4">
-						<label for="" class="mb-1">ФИО / Место работы / Должность</label>
-						<input type="text" class="form-control form-control-sm">
+						<label for="id_fio_city_job" class="mb-1">ФИО / Место работы / Должность</label>
+						{% comment %} <input type="text" class="form-control form-control-sm"> {% endcomment %}
+						{{ search_member_form.fio_city_job|addcss:"form-control form-control-sm"}}
+						<input type="hidden" name='search_member' value='true'>
 					</div>
 					<div class="form-group col-sm-2 col-sm-6 col-md-3 col-lg-2">
 						<label for="" class="mb-1">Населенный пункт</label>
@@ -65,15 +69,18 @@
 				<div class="row">
 					<div class="col-auto">
 						<button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
-						<button type="button" class="btn btn-link btn-xs">Сбросить</button>
+						<a href="{% url 'members:member_list' %}" class="btn btn-link btn-xs">Сбросить</a>
 					</div>
 				</div>
 			</form>
+			{% if search_result_count %}
+				<div class="text-info">Найдено записей: {{search_result_count}}</div>
+			{% endif %}
 		</div>
 
 		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#id_add_new_member_modal'>Добавить члена РСПС</button>
 
-		<button type="button" class="btn btn-outline-danger btn-sm mb-4 d-block mx-auto" data-toggle='modal' data-target='#modal-regCongress'>Регистрация на Съезд РСПС 2019</button>
+		{% comment %} <button type="button" class="btn btn-outline-danger btn-sm mb-4 d-block mx-auto" data-toggle='modal' data-target='#modal-regCongress'>Регистрация на Съезд РСПС 2019</button> {% endcomment %}
 
 		<div class="table-responsive" id="table-top">
 			<table class="table table-list">
