--- a/members/templates/members/lk_member_list.html
+++ b/members/templates/members/lk_member_list.html
@@ -45,31 +45,38 @@
 						<input type="hidden" name='search_member' value='true'>
 					</div>
 					<div class="form-group col-sm-2 col-sm-6 col-md-3 col-lg-2">
-						<label for="" class="mb-1">Населенный пункт</label>
-						<select class="form-control form-control-sm">
-							<option selected="">Все</option>
-							<option>Калуга</option>
+						<label for="id_city" class="mb-1">Населенный пункт</label>
+						{% comment %} <select name='city' class="form-control form-control-sm"> {% endcomment %}
+						{{ search_member_form.city|addcss:"form-control form-control-sm"}}
+							{% comment %} <option selected>Все</option> {% endcomment %}
+							{% comment %} {% for city in cities %}
+							<option>{{ city }}</option>
+							{% endfor %} {% endcomment %}
+							{% comment %} <option value='Калуга'>Калуга</option>
 							<option>Обнинск</option>
 							<option>Боровск</option>
 							<option>Жуков</option>
-							<option>Ермолино</option>
-						</select>
+							<option>Ермолино</option> {% endcomment %}
+						{% comment %} </select> {% endcomment %}
 					</div>
 					<div class="form-group col-sm-6 col-md-3 col-lg-2">
-						<label for="" class="mb-1">Статус членства</label>
-						<select class="form-control form-control-sm">
-							<option selected="">Все</option>
-							<option>новый</option>
-							<option>заявлен</option>
-							<option>одобрен</option>
-							<option>имеет сертификат </option>
-						</select>
+						<label for="id_status" class="mb-1">Статус членства</label>
+						{{ search_member_form.status|addcss:"form-control form-control-sm"}}
+						{% comment %} <select name='member_status' class="form-control form-control-sm">
+							<option selected>Все</option>
+							<option>Новый</option>
+							<option>Заявлен</option>
+							<option>Одобрен</option>
+							<option>Выдан сертификат</option>
+						</select> {% endcomment %}
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-auto">
 						<button type="submit" class="btn btn-outline-primary btn-xs"><i class="fa fa-search"></i> Найти</button>
+						{% if search_result_count %}
 						<a href="{% url 'members:member_list' %}" class="btn btn-link btn-xs">Сбросить</a>
+						{% endif %}
 					</div>
 				</div>
 			</form>
