--- a/members/templates/members/includes/member_lst_row.html
+++ b/members/templates/members/includes/member_lst_row.html
@@ -18,14 +18,11 @@
         <div>{{ member.tel }}</div>
     </td>
     <td>
-        {% comment %} <div class="status-false mb-1"><i class="fa fa-arrow-down mr-2"></i><small>{{ member.status }}</small></div> {% endcomment %}
         {% include 'members/includes/member_status_templates.html' %}
     </td>
     <td>
-        <a href="#" class="btn-action mr-3 text-primary" title="Удалить"><i class="fa fa-trash-o"></i></a>
-        {% comment %} <a href="#multiCollapseEmpl{{ member.pk }}" class="btn-action text-primary" 
-            data-collapsetarget="multiCollapseEmpl{{ member.pk }}" data-toggle="collapse" aria-expanded="false"
-            title="Изменить"><i class="fa fa-pencil"></i></a> {% endcomment %}
+        <a href="#" class="delete_member btn-action mr-3 text-primary" data-member-pk="{{ member.pk }}"
+                    data-member-fio="{{ member.fio }}" title="Удалить"><i class="fa fa-trash-o"></i></a>
         <a href="#multiCollapseEmpl{{ member.pk }}" class="pencil btn-action text-primary"
             aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
     </td>
@@ -35,6 +32,5 @@
         <div id="loadingmessage">
             <img src="{% static 'images/ajax-loader.gif' %}" alt="loading_data">
         </div>
-        {% comment %} {% include 'members/includes/member_edit_form.html' %} {% endcomment %}
     </td>
 </tr>
