members CRUD application ready

--- a/members/templates/members/includes/delete_member_confirmation_form.html
+++ b/members/templates/members/includes/delete_member_confirmation_form.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Напишите заглавными буквами "УДАЛИТЬ" в поле проверки и нажмите клавишу "ENTER"</p>
+        <p>Напишите заглавными буквами "УДАЛИТЬ" в поле проверки и нажмите "Сохранить"</p>
         <div class="form-group">
             <label for="validation_field">Проверка:</label>
             {% comment %} <input type="text" class="form-control is-invalid" id="validationServer03" placeholder="City" required> {% endcomment %}
