--- a/mainapp/templates/mainapp/account_conf.html
+++ b/mainapp/templates/mainapp/account_conf.html
@@ -14,24 +14,8 @@
 
 		<h4 class="title-page">Личный кабинет</h4>
 
-		<ul class="nav nav-tabs mb-4">
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_user' %}">Учетная запись</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_about' %}">О подразделении</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_news' %}">Новости</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_employee' %}">Члены подразделения</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link active" href="{% url 'account_conf' %}">Конференции</a>
-			</li>
-		</ul>
-		
+		{% include 'mainapp/includes/account_menu_tabs.html' %}
+
 		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#modal-regConference'>Добавить конференцию</button>
 		
 		<div class="table-responsive">
