--- a/mainapp/templates/mainapp/account_news.html
+++ b/mainapp/templates/mainapp/account_news.html
@@ -14,23 +14,8 @@
 
 		<h4 class="title-page">Личный кабинет</h4>
 
-		<ul class="nav nav-tabs mb-4 mb-xl-5">
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_user' %}">Учетная запись</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_about' %}">О подразделении</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link active" href="{% url 'account_news' %}">Новости</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_employee' %}">Члены подразделения</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'account_conf' %}">Конференции</a>
-			</li>
-		</ul>
+		{% include 'mainapp/includes/account_menu_tabs.html' %}
+
 
 		<div class="card-all">
 			<div class="row">
