--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -7,11 +7,14 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+				<li class="breadcrumb-item"><a href="{% url 'account_about' %}">Личный кабинет подразделения</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Новости</li>
 			</ol>
 		</nav>
 
-		<h4 class="title-page mb-4">Новости РСПС</h4>
+		<h4 class="title-page">Личный кабинет</h4>
+
+		{% include 'mainapp/includes/account_menu_tabs.html' %}
 
 		<div class="card-all">
 			<div class="row">  <!-- =========== Убран класс 'flex-wrap' за ненадобностью ========= -->
