--- a/members/templates/members/lk_member_list.html
+++ b/members/templates/members/lk_member_list.html
@@ -17,7 +17,7 @@
 		<h4 class="title-page">Личный кабинет</h4>
 
 		{% include 'mainapp/includes/account_menu_tabs.html' %}
-		{% comment %} {{request.resolver_match.url_name}} {% endcomment %}
+		{% comment %} request.resolver_match.url_name {% endcomment %}
 
 		<div class="search p-3 mb-4">
 			<h5>Быстрый поиск</h5>
