--- a/conferences/templates/conferences/includes/conference_add_modal.html
+++ b/conferences/templates/conferences/includes/conference_add_modal.html
@@ -60,7 +60,7 @@
 						{% comment %} <input type="text" class="form-control form-control-sm" required> {% endcomment %}
 					</div>
 					<div class="alert alert-danger" role="alert">
-					  <strong>Внимание!!!</strong>&nbsp;В профиле конференции не забудьте добавить повестку дня и зарегистрировать участников.
+					  <strong>Внимание!!!</strong>&nbsp;После сохранения конференции необходимо добавить повестку дня и зарегистрировать участников.
 					</div>
 					<div id="results"></div>
 				</div>
