--- a/conferences/templates/conferences/includes/conference_add_modal.html
+++ b/conferences/templates/conferences/includes/conference_add_modal.html
@@ -65,6 +65,7 @@
 					<div id="results"></div>
 				</div>
 				<div class="modal-footer">
+					<input type="hidden" name="username" value="{{request.user.username}}">
 					<button id="submit_conference_button" class="btn btn-primary btn-sm">Сохранить</button>
 					<button id="dismiss-link" type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
 				</div>
