--- a/conferences/templates/conferences/includes/conference_edit.html
+++ b/conferences/templates/conferences/includes/conference_edit.html
@@ -1,126 +1,141 @@
-<tr class="multi-collapse collapse edit-list" id="multiCollapseConf{{conference.pk}}">
-						<td colspan="4" class="total-column">
-							<form>
-								<div class="mb-5">
-									<h6 class='text-primary mb-4'>Сведения о конференции</h6>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-6 col-sm-4 col-lg-3">
-											<div class="input-group input-group-sm">
-												<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="">
-												<div class="input-group-append">
-													<span class="input-group-text"><i class="fa fa-calendar"></i></span>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="236005, г. Обнинск, ул. Колхозная, д. 118A">
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Конференция РСПС по Калужской области 2019">
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Развитие сварочного сообщества">
-										</div>
-									</div>
+{% load formstyles %}
+<form id="form_{{ conference.pk }}">
+	{% csrf_token %}
+	{% comment %} edit_conference_form {% endcomment %}
+	<div class="mb-5">
+		<h6 class='text-primary mb-4'>Сведения о конференции</h6>
+		<div class="form-group row">
+			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span
+					class="text-danger">*</span></label>
+			<div class="col-6 col-sm-4 col-lg-3">
+				<div class="input-group input-group-sm">
+					{{ edit_conference_form.date|addcss:"form-control datepicker-here"}}
+					{% comment %} <input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг"
+						aria-label="дд.мм.гггг" aria-describedby=""> {% endcomment %}
+					<div class="input-group-append">
+						<span class="input-group-text"><i class="fa fa-calendar"></i></span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span
+					class="text-danger">*</span></label>
+			<div class="col-sm-8 col-lg-6">
+				<input type="text" class="form-control form-control-sm" placeholder=""
+					value="236005, г. Обнинск, ул. Колхозная, д. 118A">
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span
+					class="text-danger">*</span></label>
+			<div class="col-sm-8 col-lg-6">
+				<input type="text" class="form-control form-control-sm" placeholder=""
+					value="Конференция РСПС по Калужской области 2019">
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span
+					class="text-danger">*</span></label>
+			<div class="col-sm-8 col-lg-6">
+				<input type="text" class="form-control form-control-sm" placeholder=""
+					value="Развитие сварочного сообщества">
+			</div>
+		</div>
 
-									<div class="form-group row align-items-center">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<div class="input-group input-group-sm">
-												<div class="input-group-prepend">
-													<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
-												</div>
-												<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
-												<div class="input-group-append">
-													<button class="btn btn-outline-danger" type="button" id="button-addon1" title="Удалить вопрос"><i class="fa fa-times"></i></button>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div id="add_field_area">
-										<div class="form-group row align-items-center" id="add">
-											<div class="col-sm-8 col-lg-6 offset-sm-4">
-												<div class="input-group input-group-sm">
-													<div class="input-group-prepend">
-														<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
-													</div>
-													<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
-													<div class="input-group-append">
-														<button class="btn btn-outline-danger" type="button" id="button-addon2" title="Удалить вопрос"><i class="fa fa-times"></i></button>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="sr-only">Добавить вопрос</label>
-										<div class="col-sm-6 offset-sm-4">
-											<button class="btn btn-outline-secondary btn-xs"><i class="fa fa-plus mr-2"></i>Добавить вопрос</button>
-										</div>
-									</div>
-								</div>
+		<div class="form-group row align-items-center">
+			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span
+					class="text-danger">*</span></label>
+			<div class="col-sm-8 col-lg-6">
+				<div class="input-group input-group-sm">
+					<div class="input-group-prepend">
+						<span class="input-group-text"><strong>1</strong></span>
+					</div>
+					<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
+					<div class="input-group-append">
+						<button class="btn btn-outline-danger" type="button" title="Удалить вопрос"><i
+								class="fa fa-times"></i></button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="add_field_area">
+			<div class="form-group row align-items-center" id="add">
+				<div class="col-sm-8 col-lg-6 offset-sm-4">
+					<div class="input-group input-group-sm">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
+						</div>
+						<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
+						<div class="input-group-append">
+							<button class="btn btn-outline-danger" type="button" title="Удалить вопрос"><i
+									class="fa fa-times"></i></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="form-group row">
+			<label for="" class="sr-only">Добавить вопрос</label>
+			<div class="col-sm-6 offset-sm-4">
+				<button class="btn btn-outline-secondary btn-xs"><i class="fa fa-plus mr-2"></i>Добавить вопрос</button>
+			</div>
+		</div>
+	</div>
 
-								<h6 class='text-primary mb-4'>Участники конференции</h6>
+	<h6 class='text-primary mb-4'>Участники конференции</h6>
 
-								<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal" data-target="#participantConfModal">Зарегистрировать</button>
+	<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal"
+		data-target="#participantConfModal">Зарегистрировать</button>
 
-								<div class="table-responsive table-scroll">
-									<table class="table table-list table-internal-list">
-										<thead>
-											<tr class="active">
-												<th>ФИО</th>
-												<th>Место работы / должность</th>
-												<th>Телефон / Email</th>
-												<th>Членство РСПС</th>
-												<th>Действия</th>
-											</tr>
-										</thead>
-										<tbody>
-											{% for member in conference.members.all %}
-											<tr>
-												<td>{{member.fio}}</td>
-												<td>{{member.job}}, {{member.jobplace}}</td>
-												<td>{{member.tel}}, {{member.email}}</td>
-												<td>
-													{% if member.membership %}
-													да
-													{% else %}
-													нет
-													{% endif %}
-												</td>
-												<td>
-													<div>
-														<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i class="fa fa-trash-o"></i></a>
-														<a href="#" class="btn-action text-primary" data-toggle="modal" data-target="#participantConfModal" title="Изменить"><i class="fa fa-pencil"></i></a>
-													</div>
-												</td>
-											</tr>
-											{% endfor %}
-											
-										</tbody>
-									</table>
-								</div>
+	<div class="table-responsive table-scroll">
+		<table class="table table-list table-internal-list">
+			<thead>
+				<tr class="active">
+					<th>ФИО</th>
+					<th>Место работы / должность</th>
+					<th>Телефон / Email</th>
+					<th>Членство РСПС</th>
+					<th>Действия</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for member in conference.members.all %}
+				<tr>
+					<td>{{member.fio}}</td>
+					<td>{{member.job}}, {{member.jobplace}}</td>
+					<td>{{member.tel}}, {{member.email}}</td>
+					<td>
+						{% if member.membership %}
+						да
+						{% else %}
+						нет
+						{% endif %}
+					</td>
+					<td>
+						<div>
+							<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i
+									class="fa fa-trash-o"></i></a>
+							<a href="#" class="btn-action text-primary" data-toggle="modal"
+								data-target="#participantConfModal" title="Изменить"><i class="fa fa-pencil"></i></a>
+						</div>
+					</td>
+				</tr>
+				{% endfor %}
 
-								<div class="form-group">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" id="gridCheck1">
-										<label class="form-check-label text-success" for="gridCheck1">
-											<strong>Конференция проведена</strong>
-										</label>
-									</div>
-								</div>
-								<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
-								<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
-							</form>
-						</td>
-					</tr>
+			</tbody>
+		</table>
+	</div>
+
+	<div class="form-group">
+		<div class="form-check">
+			<input class="form-check-input" type="checkbox" id="gridCheck{{ conference.pk }}">
+			<label class="form-check-label text-success" for="gridCheck1{{ conference.pk }}">
+				<strong>Конференция проведена</strong>
+			</label>
+		</div>
+	</div>
+	<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
+	<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse"
+		aria-expanded="false" role="button">Закрыть</a>
+</form>
