--- a/conferences/templates/conferences/includes/conference_edit.html
+++ b/conferences/templates/conferences/includes/conference_edit.html
@@ -19,30 +19,23 @@
 			</div>
 		</div>
 		<div class="form-group row">
-			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span
+			<label for="id_place" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span
 					class="text-danger">*</span></label>
 			<div class="col-sm-8 col-lg-6">
-				<input type="text" class="form-control form-control-sm" placeholder=""
-					value="236005, г. Обнинск, ул. Колхозная, д. 118A">
+			     {{ edit_conference_form.place|addcss:"form-control form-control-sm"}}
+				{% comment %} <input type="text" class="form-control form-control-sm" placeholder=""
+					value="236005, г. Обнинск, ул. Колхозная, д. 118A"> {% endcomment %}
 			</div>
 		</div>
 		<div class="form-group row">
-			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span
+			<label for="id_title" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span
 					class="text-danger">*</span></label>
 			<div class="col-sm-8 col-lg-6">
-				<input type="text" class="form-control form-control-sm" placeholder=""
-					value="Конференция РСПС по Калужской области 2019">
+			     {{ edit_conference_form.title|addcss:"form-control form-control-sm"}}
+				{% comment %} <input type="text" class="form-control form-control-sm" placeholder=""
+					value="Конференция РСПС по Калужской области 2019"> {% endcomment %}
 			</div>
 		</div>
-		<div class="form-group row">
-			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span
-					class="text-danger">*</span></label>
-			<div class="col-sm-8 col-lg-6">
-				<input type="text" class="form-control form-control-sm" placeholder=""
-					value="Развитие сварочного сообщества">
-			</div>
-		</div>
-
 		<div class="form-group row align-items-center">
 			<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span
 					class="text-danger">*</span></label>
